fix: add margin to event cards for improved spacing

--- a/chamber/styles/discover-base.css
+++ b/chamber/styles/discover-base.css
@@ -242,6 +242,11 @@ section{
 /* Carousel end */
 
 /* event-cards */
+
+#events-cards{
+    margin: 1em 0;
+}
+
 .event{
     display: grid;
 
